--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@
   background-size: cover;
   background-position: center;
   height: 500px;
+  padding-top: 36px;
 }
 .name6 {
   display: flex;
@@ -127,4 +128,135 @@
   font-weight: 400;
   display: flex;
   justify-content: center;
+  width: 390px;
+  height: 32px;
+}
+.xxa {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  padding-top: 20px;
+}
+.name7 {
+  background: linear-gradient(
+    90deg,
+    #0090f7 0%,
+    #ba62fc 33.33%,
+    #f2416b 66.67%,
+    #f55600 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18px; /* 128.571% */
+  display: flex;
+  justify-content: center;
+  padding-top: 300px;
+}
+.page4 {
+  background-image: url(/da862da9442f25fda2746d5c8c6f9ec5d93a3101.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  justify-content: center;
+  display: flex;
+}
+.name8 {
+  color: #f5f5f7;
+  text-align: center;
+  font-family: Inter;
+  font-size: 30px;
+}
+.name9 {
+  width: 241px;
+  height: 53px;
+  color: #f5f5f7;
+  text-align: center;
+  font-family: Inter;
+  font-size: 18px;
+}
+.xxi {
+  width: 241px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+.xxo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-bottom: 30px;
+}
+.xxe {
+  display: flex;
+  flex-direction: row;
+}
+.page5 {
+  background-image: url(/watch.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 500px;
+}
+.page5-1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 46px;
+  gap: 10px;
+}
+.name10 {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 28px;
+}
+.name11 {
+  display: flex;
+  gap: 6px;
+}
+.name12 {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 13px;
+  letter-spacing: 2px;
+}
+.name13 {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 18px;
+}
+.page6 {
+  background-image: url(/macbook.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 500px;
+  padding-top: 42px;
+}
+.name14 {
+  color: #1d1d1f;
+  text-align: center;
+  font-family: Inter;
+  font-size: 30px;
+}
+.name15 {
+  color: black;
+  text-align: center;
+  font-family: Inter;
+  font-size: 18px;
+}
+.hhi {
+  display: flex;
+  flex-direction: row;
+  padding-top: 16px;
+  justify-content: center;
+  gap: 12px;
 }
