--- a/style.css
+++ b/style.css
@@ -243,7 +243,6 @@
   background-position: center;
   background-size: cover;
   height: 500px;
-  padding-top: 42px;
   margin-top: 12px;
 }
 .name14 {
@@ -251,6 +250,7 @@
   text-align: center;
   font-family: Inter;
   font-size: 30px;
+  padding-top: 46px;
 }
 .name15 {
   color: black;
@@ -363,6 +363,7 @@
   text-align: center;
   font-family: Inter;
   font-size: 28px;
+  font-weight: 700;
 }
 .name25 {
   color: #1d1d1f;
@@ -547,7 +548,7 @@
     display: block !important;
   }
   .tablet1 {
-    background-image: url(/Apple/source/ted\ lasso.jpg);
+    background-image: url(/source/ted\ lasso.jpg);
     background-position: center;
     background-size: cover;
     width: 689px;
@@ -555,7 +556,7 @@
     display: none;
   }
   .tablet2 {
-    background-image: url(/Apple/source/blitz.jpg);
+    background-image: url(/source/blitz.png);
     background-position: center;
     background-size: cover;
     width: 689px;
@@ -563,7 +564,7 @@
     display: none;
   }
   .tablet3 {
-    background-image: url(/Apple/source/silo.jpg);
+    background-image: url(/source/silo.jpg);
     background-position: center;
     background-size: cover;
     width: 689px;
@@ -571,7 +572,7 @@
     display: none;
   }
   .tablet4 {
-    background-image: url(./Apple/source/bad-sisters.jpg);
+    background-image: url(/source/bad\ sisters.jpg);
     background-size: cover;
     background-position: center;
     width: 689px;
@@ -579,7 +580,7 @@
     display: none;
   }
   .tablet5 {
-    background-image: url(./Apple/source/shrinking.jpg);
+    background-image: url(/source/shrinking.jpg);
     background-size: cover;
     background-position: center;
     width: 689px;
@@ -587,7 +588,7 @@
     display: none;
   }
   .tablet6 {
-    background-image: url(./Apple/source/seoson\ pass.jpg);
+    background-image: url(/source/seoson\ pass.jpg);
     background-size: cover;
     background-position: center;
     width: 689px;
@@ -595,7 +596,7 @@
     display: none;
   }
   .tablet7 {
-    background-image: url(./Apple/source/charlie\ brpwn.jpg);
+    background-image: url(/source/charlie\ brpwn.jpg);
     background-size: cover;
     background-position: center;
     width: 689px;
@@ -603,7 +604,7 @@
     display: none;
   }
   .tablet8 {
-    background-image: url(./Apple/source/disclaimer.jpg);
+    background-image: url(/source/disclaimer.jpg);
     background-size: cover;
     background-position: center;
     width: 689px;
@@ -611,7 +612,7 @@
     display: none;
   }
   .tablet9 {
-    background-image: url(./Apple/source/slow\ horses.jpg);
+    background-image: url(/source/slow\ horses.jpg);
     background-size: cover;
     background-position: center;
     width: 689px;
@@ -619,7 +620,7 @@
     display: none;
   }
   .tablet10 {
-    background-image: url(./Apple/source/bread\ roses.jpg);
+    background-image: url(/source/bread\ roses.jpg);
     background-size: cover;
     background-position: center;
     width: 689px;
@@ -632,4 +633,225 @@
   .scroll {
     height: 368px;
   }
+}
+@media (min-width: 1920px) {
+  .picture {
+    background-image: url(./1920-1.jpg);
+    background-position: center;
+    background-size: cover;
+  }
+  .page2 {
+    background-image: url(/1920-2.jpg);
+    background-position: center;
+    background-size: cover;
+  }
+  .nemelt1 {
+    width: 100%;
+    height: 692px;
+    margin-top: 12px;
+    display: flex !important;
+    justify-content: end;
+    align-items: center;
+    flex-direction: column;
+  }
+  .nemelt2 {
+    width: 50%;
+    /* display: block !important; */
+  }
+  .page4 {
+    display: none;
+  }
+  .com1 {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+  }
+  .page3 {
+    width: 50%;
+  }
+  .page6-change {
+    width: 50%;
+    display: block !important;
+  }
+  .page4 {
+    display: none;
+  }
+  .page6 {
+    display: none;
+  }
+  .page7 {
+    display: none;
+  }
+  .page8 {
+    display: none;
+  }
+  .page8-1 {
+    width: 50%;
+    margin-top: 12px;
+  }
+  .conteiner {
+    display: none;
+  }
+  .comscroll1 {
+    background-image: url(/1920scroll1.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 1250px;
+    height: 668px;
+  }
+  .comscroll2 {
+    background-image: url(/1920scroll2.png);
+    background-position: center;
+    background-size: cover;
+    width: 1250px;
+    height: 668px;
+  }
+  .comscroll3 {
+    background-image: url(/1920scroll3.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 1250px;
+    height: 668px;
+  }
+}
+.nemelt1 {
+  background-image: url(/1920-3.jpg);
+  background-position: center;
+  background-size: cover;
+  display: none;
+}
+.name33 {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 52px;
+  font-weight: 600;
+  letter-spacing: -0.28px;
+}
+.name34 {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 400;
+}
+.name35 {
+  border-radius: 999px;
+  background: #0071e3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 107px;
+  height: 36px;
+  font-size: 14px;
+  font-family: inter;
+  color: white;
+  margin-bottom: 82px;
+}
+.name36 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nemelt2 {
+  background-image: url(/1920-4.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 536px;
+  margin-top: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  flex-direction: column;
+  gap: 8px;
+}
+@media (max-width: 1920px) {
+  .nemelt2 {
+    display: none;
+  }
+}
+.name38 {
+  color: #f5f5f7;
+  text-align: center;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+}
+.name37 {
+  color: #f5f5f7;
+  text-align: center;
+  font-family: Inter;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+}
+.page6-change {
+  background-image: url(/macbook.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 500px;
+  margin-top: 22px;
+  display: none;
+}
+.page8-1 {
+  background-image: url(/1920-5.jpg);
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+.name26-change {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  padding-top: 58px;
+}
+.name25-change {
+  color: #1d1d1f;
+  text-align: center;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  width: 322px;
+}
+.hhi-change {
+  display: flex;
+  flex-direction: row;
+  padding-top: 16px;
+  justify-content: center;
+  gap: 12px;
+}
+.name2-change {
+  border-radius: 999px;
+  background: #0071e3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 107px;
+  height: 36px;
+  font-size: 14px;
+  font-family: inter;
+  color: white;
+}
+.name3-change {
+  width: 100px;
+  height: 36px;
+  border: 1px solid #2997ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 999px;
+  font-size: 14px;
+  font-family: inter;
+  color: #2997ff;
+}
+.name27-change {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
 }
