--- a/style.css
+++ b/style.css
@@ -384,6 +384,7 @@
   align-items: center;
   gap: 10px;
   margin-top: 12px;
+  /* overflow: scroll; */
 }
 .name27 {
   display: flex;
@@ -436,8 +437,8 @@
   width: fit-content;
 }
 .conteiner {
-  width: 100vw;
-  overflow: scroll;
+  /* width: 100vw; */
+  width: fit-content;
 }
 .scroll1 {
   width: 8px;
@@ -633,6 +634,9 @@
   .scroll {
     height: 368px;
   }
+  .comscroll2 {
+    display: none;
+  }
 }
 @media (min-width: 1920px) {
   .picture {
@@ -700,11 +704,14 @@
     height: 668px;
   }
   .comscroll2 {
-    background-image: url(/1920scroll2.png);
+    background-image: url(/flyme.jpg);
     background-position: center;
     background-size: cover;
     width: 1250px;
     height: 668px;
+    display: flex;
+    align-items: end;
+    justify-content: start;
   }
   .comscroll3 {
     background-image: url(/1920scroll3.jpg);
@@ -768,6 +775,15 @@
 @media (max-width: 1920px) {
   .nemelt2 {
     display: none;
+  }
+  .comscroll2 {
+    display: none;
+  }
+  .page8-1 {
+    display: none !important;
+  }
+  .button {
+    display: none !important;
   }
 }
 .name38 {
@@ -854,4 +870,43 @@
   display: flex;
   flex-direction: row;
   gap: 16px;
+
+  width: fit-content;
+}
+
+.t1 {
+  border-radius: 999px;
+  background: white;
+  display: inline-flex;
+  padding: 12px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-left: 70px;
+  margin-bottom: 58px;
+}
+.t2 {
+  color: white;
+  font-family: Inter;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  padding-bottom: 67px;
+  padding-left: 10px;
+}
+.wow {
+  color: black;
+  text-align: center;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+}
+.button {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
 }
