--- a/style.css
+++ b/style.css
@@ -785,6 +785,9 @@
   .button {
     display: none !important;
   }
+  .zuragnuud {
+    display: none !important;
+  }
 }
 .name38 {
   color: #f5f5f7;
@@ -909,4 +912,93 @@
   gap: 24px;
   align-items: center;
   justify-content: center;
+}
+.zuragnuud {
+  display: flex;
+  gap: 16px;
+}
+.zurag1 {
+  background-image: url(/image1.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 417px;
+  height: 236px;
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  justify-content: space-between;
+}
+.zurag2 {
+  background-image: url(/image2.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 196px;
+  height: 196px;
+  margin-left: 15px;
+  margin-top: 20px;
+}
+.zurag3 {
+  background-image: url(/image3.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 417px;
+  height: 236px;
+  display: flex;
+  align-items: end;
+  justify-content: space-around;
+}
+.zurag4 {
+  background-image: url(/image4.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 417px;
+  height: 236px;
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+.zurag5 {
+  background-image: url(/image5.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 196px;
+  height: 196px;
+  margin-top: 20px;
+  margin-left: 15px;
+}
+.zurag2b {
+  background-color: #1b2632;
+  background-position: center;
+  background-size: cover;
+  width: 417px;
+  height: 236px;
+  display: flex;
+}
+.zurag5b {
+  background-color: #ebb799;
+  background-position: center;
+  background-size: cover;
+  width: 417px;
+  height: 236px;
+}
+.text {
+  color: #fff;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  width: 200px;
+  margin-left: 15px;
+}
+.text1 {
+  color: #fff;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 600;
+  width: 224px;
+  height: 18px;
+  margin-bottom: 20px;
+  margin-left: 15px;
 }
